{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 90,
  "lineage": "c5d7a123-7fe9-104c-e277-c9a215ec7811",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:731621525311:loadbalancer/app/rubyapp-alb/68eafd725ab65be3",
            "arn_suffix": "app/rubyapp-alb/68eafd725ab65be3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "rubyapp-alb-1520251917.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:731621525311:loadbalancer/app/rubyapp-alb/68eafd725ab65be3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rubyapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0024f202f4ae3838f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00130ade6f5b6c43a"
              },
              {
                "subnet_id": "subnet-02892516b20b8d478"
              },
              {
                "subnet_id": "subnet-0ac27c215eda2904a"
              }
            ],
            "subnets": [
              "subnet-00130ade6f5b6c43a",
              "subnet-02892516b20b8d478",
              "subnet-0ac27c215eda2904a"
            ],
            "tags": {
              "Name": "rubyapp-alb"
            },
            "tags_all": {
              "Name": "rubyapp-alb"
            },
            "vpc_id": "vpc-087bff9758f199951",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:731621525311:listener/app/rubyapp-alb/68eafd725ab65be3/e1f40a12c90b1258",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:731621525311:targetgroup/rubyapp-tg/ec2972ca738125b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:731621525311:listener/app/rubyapp-alb/68eafd725ab65be3/e1f40a12c90b1258",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:731621525311:loadbalancer/app/rubyapp-alb/68eafd725ab65be3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.demo-alb",
            "module.alb.aws_lb_target_group.demo-target-group",
            "module.sg.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:731621525311:targetgroup/rubyapp-tg/ec2972ca738125b8",
            "arn_suffix": "targetgroup/rubyapp-tg/ec2972ca738125b8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:731621525311:targetgroup/rubyapp-tg/ec2972ca738125b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rubyapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-0c53bcb51ed36e8ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c53bcb51ed36e8ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e030c764f3c00c0",
            "private_dns": "ip-10-0-0-36.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a64e37914a7f4fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbddc791bcc2f2c7",
            "tags": {
              "Name": "private-instance-1"
            },
            "tags_all": {
              "Name": "private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-0e552825ceb7192da",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e552825ceb7192da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0537daaa55f54c3d9",
            "private_dns": "ip-10-0-2-169.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ec6c945c5779724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085d3bebcd3541a4a",
            "tags": {
              "Name": "private-instance-2"
            },
            "tags_all": {
              "Name": "private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-098927e2fcd004b12",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098927e2fcd004b12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bfd9d63e7131134b",
            "private_dns": "ip-10-0-4-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e16af57b3b7d2403",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f86bd972d9a7368",
            "tags": {
              "Name": "private-instance-3"
            },
            "tags_all": {
              "Name": "private-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-0f22342f152702977",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f22342f152702977",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d0003335ae84542",
            "private_dns": "ip-10-0-1-132.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-35-89-194-223.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.194.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a42713853d71eea6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02892516b20b8d478",
            "tags": {
              "Name": "public-instance-1"
            },
            "tags_all": {
              "Name": "public-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-01de237b14c1fceba",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01de237b14c1fceba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06839856c71946363",
            "private_dns": "ip-10-0-3-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.47",
            "public_dns": "ec2-54-189-178-214.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.178.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0915cfc3bf6b6a53e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00130ade6f5b6c43a",
            "tags": {
              "Name": "public-instance-2"
            },
            "tags_all": {
              "Name": "public-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.azs",
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a5f5ada0e7da53",
            "arn": "arn:aws:ec2:us-west-2:731621525311:instance/i-085549fd14994e9ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085549fd14994e9ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075b793b754e452f6",
            "private_dns": "ip-10-0-5-64.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.64",
            "public_dns": "ec2-35-88-202-37.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.202.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08452b89490c854ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac27c215eda2904a",
            "tags": {
              "Name": "public-instance-3"
            },
            "tags_all": {
              "Name": "public-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bafe34d2a63e5216"
            ]
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.azs",
            "module.ec2.aws_key_pair.key-name",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039fcd1cf7c4f17ff",
            "association_id": "eipassoc-031dd61f1e5c28302",
            "domain": "vpc",
            "id": "eipalloc-039fcd1cf7c4f17ff",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e7ccbdcf73181fca",
            "private_dns": "ip-10-0-1-143.us-west-2.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-44-241-222-37.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.222.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rubyapp-eip"
            },
            "tags_all": {
              "Name": "rubyapp-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039fcd1cf7c4f17ff",
            "connectivity_type": "public",
            "id": "nat-044b5a89ba98191ad",
            "network_interface_id": "eni-0e7ccbdcf73181fca",
            "private_ip": "10.0.1.143",
            "public_ip": "44.241.222.37",
            "subnet_id": "subnet-02892516b20b8d478",
            "tags": {
              "Name": "rubyapp-nat-gw"
            },
            "tags_all": {
              "Name": "rubyapp-nat-gw"
            }
          },
          "dependencies": [
            "module.nat-gw.aws_eip.nat-eip",
            "module.vpc.aws_internet_gateway.demo-igw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gw",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7eec495f843e8b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044b5a89ba98191ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7eec495f843e8b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-igw",
            "module.vpc.aws_route_table.private-demo-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs",
            "module.nat-gw.aws_eip.nat-eip",
            "module.nat-gw.aws_nat_gateway.nat-gateway-demo"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:security-group/sg-0024f202f4ae3838f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0024f202f4ae3838f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "731621525311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:security-group/sg-0c5395c6399b53583",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5395c6399b53583",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "731621525311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:security-group/sg-0878061f6721c2a14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0878061f6721c2a14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "731621525311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:security-group/sg-0f562cf7008b36c67",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f562cf7008b36c67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-sql-sg",
            "name_prefix": "",
            "owner_id": "731621525311",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:internet-gateway/igw-0c57e9de864c5ece7",
            "id": "igw-0c57e9de864c5ece7",
            "owner_id": "731621525311",
            "tags": {
              "Environment": "dev",
              "Name": "rubyapp-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rubyapp-igw"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-subnet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c57e9de864c5ece7",
            "id": "r-rtb-018b27b17dd35d4fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018b27b17dd35d4fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-igw",
            "module.vpc.aws_route_table.public-demo-rt",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:route-table/rtb-0b7eec495f843e8b4",
            "id": "rtb-0b7eec495f843e8b4",
            "owner_id": "731621525311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044b5a89ba98191ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rubyapp-priv-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rubyapp-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:route-table/rtb-018b27b17dd35d4fa",
            "id": "rtb-018b27b17dd35d4fa",
            "owner_id": "731621525311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c57e9de864c5ece7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rubyapp-pub-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rubyapp-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-087bff9758f199951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-demo-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22f0f1cf9be503a",
            "route_table_id": "rtb-0b7eec495f843e8b4",
            "subnet_id": "subnet-0fbddc791bcc2f2c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-demo-rt",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296188ccbdf08439",
            "route_table_id": "rtb-0b7eec495f843e8b4",
            "subnet_id": "subnet-085d3bebcd3541a4a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-demo-rt",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b9b123452bb14f8",
            "route_table_id": "rtb-0b7eec495f843e8b4",
            "subnet_id": "subnet-08f86bd972d9a7368"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private-demo-rt",
            "module.vpc.aws_subnet.private-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-demo-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fbf2577b5bbf5f0",
            "route_table_id": "rtb-018b27b17dd35d4fa",
            "subnet_id": "subnet-02892516b20b8d478"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-demo-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de0f7967426234ca",
            "route_table_id": "rtb-018b27b17dd35d4fa",
            "subnet_id": "subnet-00130ade6f5b6c43a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-demo-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040607b0e8d77e15a",
            "route_table_id": "rtb-018b27b17dd35d4fa",
            "subnet_id": "subnet-0ac27c215eda2904a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-demo-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-0fbddc791bcc2f2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbddc791bcc2f2c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-085d3bebcd3541a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085d3bebcd3541a4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-08f86bd972d9a7368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f86bd972d9a7368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-02892516b20b8d478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02892516b20b8d478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-00130ade6f5b6c43a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00130ade6f5b6c43a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:subnet/subnet-0ac27c215eda2904a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac27c215eda2904a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731621525311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-087bff9758f199951"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731621525311:vpc/vpc-087bff9758f199951",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01559c12117425469",
            "default_route_table_id": "rtb-0d4c006755764f57c",
            "default_security_group_id": "sg-0bafe34d2a63e5216",
            "dhcp_options_id": "dopt-f2fbc78a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087bff9758f199951",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4c006755764f57c",
            "owner_id": "731621525311",
            "tags": {
              "Environment": "dev",
              "Name": "rubyapp-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rubyapp-vpc"
            }
          }
        }
      ]
    }
  ]
}